// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button disabled matches snapshot: DisabledButton 1`] = `
<div>
  <button
    aria-disabled="true"
    class="nhsuk-button nhsuk-button--disabled"
    data-module="nhsuk-button"
    disabled=""
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`Button matches snapshot: PlainButton 1`] = `
<div>
  <button
    aria-disabled="false"
    class="nhsuk-button"
    data-module="nhsuk-button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`Button reverse matches snapshot: ReverseButton 1`] = `
<div>
  <button
    aria-disabled="false"
    class="nhsuk-button nhsuk-button--reverse"
    data-module="nhsuk-button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`Button secondary matches snapshot: SecondaryButton 1`] = `
<div>
  <button
    aria-disabled="false"
    class="nhsuk-button nhsuk-button--secondary"
    data-module="nhsuk-button"
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`ButtonLink button types disabled matches snapshot: DisabledButton 1`] = `
<div>
  <a
    aria-disabled="true"
    class="nhsuk-button nhsuk-button--disabled"
    data-module="nhsuk-button"
    draggable="false"
    href="/"
    role="button"
  >
    Submit
  </a>
</div>
`;

exports[`ButtonLink button types reverse matches snapshot: ReverseButton 1`] = `
<div>
  <a
    aria-disabled="false"
    class="nhsuk-button nhsuk-button--reverse"
    data-module="nhsuk-button"
    draggable="false"
    href="/"
    role="button"
  >
    Submit
  </a>
</div>
`;

exports[`ButtonLink button types secondary matches snapshot: SecondaryButton 1`] = `
<div>
  <a
    aria-disabled="false"
    class="nhsuk-button nhsuk-button--secondary"
    data-module="nhsuk-button"
    draggable="false"
    href="/"
    role="button"
  >
    Submit
  </a>
</div>
`;

exports[`ButtonLink matches snapshot: PlainButton 1`] = `
<div>
  <a
    aria-disabled="false"
    class="nhsuk-button"
    data-module="nhsuk-button"
    draggable="false"
    href="/"
    role="button"
  >
    Submit
  </a>
</div>
`;
